BUG : Correct a bug with set incorrect limit on products load in catalog list page. BUG : Correct a bug with tags wraping to multiple lines in product card.

--- a/src/common/product/card/styles.styl
+++ b/src/common/product/card/styles.styl
@@ -13,6 +13,8 @@
     
     .tags-container
         padding: 0 30px;
+        white-space: nowrap;
+        overflow: hidden;
         
         .tag
             font-size: 0.7em;
